@@ -13,6 +13,7 @@ dnsutils
 gcc
 gzip
 iptables
+ispell
 libapache2-mod-cband
 libapache2-mod-fastcgi
 libberkeleydb-perl
