@@ -15,6 +15,7 @@ gcc
 postgrey
 gzip
 iptables
+ispell
 libapache2-mod-cband
 libapache2-mod-fastcgi
 libberkeleydb-perl
