@@ -716,7 +716,7 @@ sub setup_sql {
 	# Let's populate our base with some data;
 	#
 
-	my $admin_password = crypt_data($main::ua{'admin_password'});
+	my $admin_password = crypt_md5_data($main::ua{'admin_password'});
 
 	$sql = "INSERT INTO admin (admin_id, admin_name, admin_pass, admin_type, email) VALUES  (1, '$main::ua{'admin'}','$admin_password', 'admin','$main::ua{'admin_email'}')";
 
