@@ -9,6 +9,9 @@ ispCP ω 1.0.0 Changelog
 		* Fixed #1419: Template error and missing menu when a client try to create catch all: client/mail_catchall_add.php
 		* Fixed #1420: Missing menu when a client try to edit email: client/mail_edit.php
 		* Fixed #1421: Client can`t change sql password: client/sql_change_password.php (template error)
+		* Fixed #1423: e-mail as normal mail and e-mail forward not in /etc/courier/userdb
+		* Fixed #1424: Adminstrator password created by setup is truncated at 8 characters
+		* Fixed #1428: ispell is needed for webmail
 
 2008-07-16 Benedikt Heintel
 	- GUI:
